<resources>
    <string name="app_name">Mobilki</string>
    <string name="next">Next</string>
    <string name="start_using">Start using</string>
    <string name="login_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="age_hint">Age</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_register">Sign up</string>
    <string name="add_shop_list">Post new shopping list</string>
    <string name="search">Search</string>
    <string name="Settings">settings</string>
    <string name="shop">Shop</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="enter_item">Item </string>
    <string name="add_item">Add Item</string>
    <string name="quantity">Quantity</string>
    <string name="my_profile">My profile</string>
    <string name="chats">Chats</string>
    <string name="my_shopping_lists">My shopping lists</string>
    <string name="my_responses">My responses</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="measurements">
        <item>szt</item>
        <item>op</item>
        <item>kg</item>
        <item>g</item>
        <item>L</item>
    </string-array>
    <string name="fields_reuired">All fields required</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="age">Age:</string>
    <string name="log_out">Log out</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Post Shopping List</string>

    <!--introduction-->
    <string name="title_1">Shopping</string>
    <string name="description_1">Thanks to this app you can get your daily shops without leaving a house,
        just create your shopping list and use help of others people.</string>

    <string name="title_2">Helping</string>
    <string name="description_2">Many people are in quarantine nowadays due to the coronavirus
        pandemy so they need help with shopping. If you want to help this app is perfect for you.</string>

    <string name="title_3">Payment</string>
    <string name="description_3">The app is directed to volunteers and people in need.
        This means that announcements should be free of charge and this way you only
        pay for your shopping bills.</string>

    <string name="app">BringMeShopping</string>
    <string name="welcome">Welcome in</string>
    <string name="welcomeText_1">Thanks for signing up! We wish you had enjoyed using it.</string>
    <string name="startUsingBtn">Start using</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message...</string>
    <string name="username">username</string>
    <string name="profile">Your profile</string>
    <string name="search_users">Type to search...</string>
    <string name="delievery_address">Delievery address:</string>
    <string name="items">Items:</string>
    <string name="status">status:</string>
    <string name="respond">Respond</string>
    <string name="update_status">Update status</string>
    <string name="give_up">Give up</string>
    <string name="none">None</string>
    <string name="done">Done</string>
    <string name="rateBtn">Rate</string>
    <string name="skipBtn">Skip</string>
    <string name="rateTitle">How helpful was the user:</string>
    <string name="profile_name">Firstname:</string>
    <string name="profile_lastname">Lastname:</string>
    <string name="profile_rate">Rate:</string>
    <string name="profile_rates_number">Rates number:</string>
    <string name="all_posts">All posts</string>
    <string name="shop_1">Shop:</string>
    <string name="no_lists_yet">No lists yet</string>
    <string name="shopping_list_posts">Shopping list posts</string>


</resources>