<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/doneOption"
        android:title="@string/done"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_done_outline_24"
        />

    <item
        android:title="@string/edit"
        android:id="@+id/editOption"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_edit_24"/>

    <item
        android:id="@+id/deleteOption"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_delete_outline_24"/>
    <item
        android:id="@+id/respondOption"
        android:title="@string/respond"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_message_24"/>

</menu>