<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".activities.AddShoppingListActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/info"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/shopEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shop"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/addressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/cityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:textSize="20sp"/>
            </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_above="@+id/adding"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/items"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/itemsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

        <LinearLayout
            android:layout_gravity="bottom"
            android:id="@+id/adding"
            android:layout_above="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/itemNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_item"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/itemQuantityEditText"
                android:hint="@string/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/measurementSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                />
        </LinearLayout>



    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/addItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="8sp"
            android:background="@color/bar"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="8sp"
            android:padding="8sp"
            android:text="@string/add_item"/>


        <Button
            android:id="@+id/addShLButton"
            android:text="@string/save"
            android:padding="8sp"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:layout_width="wrap_content"
            android:background="@color/bar"
            android:textColor="@color/colorWhite"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </RelativeLayout>


</LinearLayout>