<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appIntro1"
    tools:context=".register.WelcomeScreenActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:width="300dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#FBF9F9"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:width="300dp"
        android:gravity="center"
        android:text="@string/app"
        android:textColor="#FBF9F9"
        android:textSize="30sp"
        android:textStyle="normal" />

    <androidx.cardview.widget.CardView
        android:layout_width="255dp"
        android:layout_height="255dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="250dp"
        app:cardBackgroundColor="@color/colorWhite">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/welcome" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="552dp"
        android:gravity="center"
        android:text="@string/welcomeText_1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/startUsingBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/btnColor"
        android:text="@string/startUsingBtn"
        android:textColor="#FFFFFF" />


</RelativeLayout>