<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appIntro1"
    tools:context=".activities.RateActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/rel_rate"
        android:padding="30dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/rateTitle"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateTitleUser"
            android:layout_below="@+id/rateTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/rateTitleUser"
            android:id="@+id/profile_image"
            android:layout_centerHorizontal="true" />


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:progressTint="@color/rateBar"
            android:numStars="5"
            android:stepSize=".25" />

    </RelativeLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rateBtn"
        android:layout_below="@+id/rel_rate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/rateBtn"
        android:background="@color/btnColor"
        android:textColor="@color/colorWhite"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skipBtn"
        android:layout_below="@+id/rateBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/skipBtn"
        android:background="@color/btnColor"
        android:textColor="@color/colorWhite"
        />




</RelativeLayout>





